Fix crash when losing network while trying to connect a new session.

In this case all already ready sessions disconnect, and with none left, the
account object is deleted to prepare the full reconnect. The pending
session then fails as well, at which point accessing m_account will crash.

BUG: 260009